[package]
name = "arguibot"
version = "2.0.0"
description = "Entorno de desarrollo basado en la programaci칩n en bloque para la ense침anza de la rob칩tica usando la plataforma Arduino"
authors = ["Nicol치s Streri <nicolas@streri.com>"]
license = "MIT"
repository = "https://github.com/nicostreri/ArguiBot"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-message", "dialog-save", "fs-create-dir", "fs-exists", "fs-read-file", "fs-write-file", "path-all", "shell-open", "shell-sidecar", "updater", "window-close", "window-create", "window-hide", "window-maximize", "window-minimize", "window-set-focus", "window-show", "window-start-dragging", "window-unmaximize", "window-unminimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-upload = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-extract = { path = "./../tauri-plugin-extract/" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
